Add native access and exports for JDK 21
Signed-off-by: James Pether Sörling <pethers@users.noreply.github.com>