@@ -164,7 +164,7 @@
     <javadoc.src.version>21</javadoc.src.version>
     <javadoc.target.version>21</javadoc.target.version>
     <testAdditionalRuntimeArgLine>-XX:+EnableDynamicAgentLoading --add-exports
-      java.base/sun.nio.ch=ALL-UNNAMED
+      java.base/sun.nio.ch=ALL-UNNAMED --enable-native-access=ALL-UNNAMED
       --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens
       java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
       --add-opens java.base/java.util=ALL-UNNAMED</testAdditionalRuntimeArgLine>
@@ -1455,7 +1455,7 @@
         <jdk>25</jdk>
       </activation>
       <properties>
-        <testAdditionalRuntimeArgLine>-XX:+EnableDynamicAgentLoading --add-exports
+        <testAdditionalRuntimeArgLine>-XX:+EnableDynamicAgentLoading --enable-native-access=ALL-UNNAMED --add-exports
           java.base/sun.nio.ch=ALL-UNNAMED
           --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens
           java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
